KSAP-1051 Fix vertical align in course search results toolbar
-Updated ksapCourseSearchColumns widths in ksap.search.js
-Updated a.ksap-text-ellipsis width in ksap.search.less
-Updated table.ksap-course-search-results-datatable thead tr th vertical-align in ksap.search.less

git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-ap/trunk@67240 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-ap-web/src/main/webapp/ks-ap/css/ksap.search.less
+++ b/ks-ap-web/src/main/webapp/ks-ap/css/ksap.search.less
@@ -397,6 +397,7 @@ table.ksap-course-search-results-datatable thead tr th {
   cursor: default;
   font-size:1em;
   font-weight: bold;
+  vertical-align:middle;
 }
 
 table.ksap-course-search-results-datatable thead tr th[aria-sort='ascending'],
@@ -463,7 +464,7 @@ table.ksap-course-search-results-datatable tbody tr td a.ksap-text-ellipsis {
   text-overflow: ellipsis;
   -o-text-overflow: ellipsis;
   -ms-text-overflow: ellipsis;
-  width: 160px;
+  width: 150px; /*Changed width from 160 to 150 for KSAP-1051*/
 }
 table.ksap-course-search-results-datatable tbody tr td a.ksap-text-ellipsis:visited{
   color: #3355a6;
